# lidarscan-msg-yolo-demo

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: lidarscan_view.rviz
launch/: lidarscan_view.launch.py
lidarscan_msg_yolo_demo/: __init__.py  lidarscan_yolo_consumer.py
